--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"秦以宁的博客",
+    "subTitle":"Qin YiNing's blog.",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/172038171?v=4",
     "GMEEK_VERSION":"last"
 }
